--- a/index.html
+++ b/index.html
@@ -15,29 +15,35 @@
   </font>
   <font color="blue">
     <h2> 
-      Registration form 
+      Subject Feedback Form
     </h2></br></br>
   </font>
 <form>
-  <label>First name  <input type="text" /></label></br></br>
-  <label>Middle name<input type="text" /></label></br></br>
-  <label>Last name<input type="text" /></label></br></br>
-  <label>father name<input type="text" /></label></br></br>
-  <label>Mother name<input type="text" /></label></br></br>
+  <label>Your Name  <input type="text" /></label></br></br>
+  <label>Your UID<input type="text" /></label></br></br>
+  <label>Cloud Computing<input type="text" /></label><select name="Cloud">
+    <option value="none" selected>select</option>
+    <option value="male">Good</option>
+    <option value="female">Bad</option>
+    </select></br></br>
+   
 
-    Select Gender:
-    <select name="gender">
-    <option value="none" selected>Gender</option>
-    <option value="male">Male</option>
-    <option value="female">Female</option>
-    </select></form><br>
+  <label>Software Testing<input type="text" /></label>
+  <select name="Software">
+    <option value="none" selected>select</option>
+    <option value="male">Good</option>
+    <option value="female">Bad</option>
+    </select></br></br>
+  <label>Advanced Internet Programming<input type="text" />
+    <select name="Aip">
+    <option value="none" selected>select</option>
+    <option value="male">Good</option>
+    <option value="female">Bad</option>
+    </select></label></br></br>
 
-    <label for="address">Address</label>
-      <textarea id="address" name="Address" rows="2" cols="30">
-        Enter address here
-      </textarea><br>
-<label>Email  <input type="text" /></label></br></br>
-  <label>Phone<input type="text" /></label></br></br>
+    </form><br>
+
+    
   <input type="submit" value="Submit">
   <input type="reset" value="Reset">
   </center>
